advance debug tut

--- a/debug/Makefile
+++ b/debug/Makefile
@@ -1,3 +1,5 @@
 debug.pdf: slides_source/debug.tex
 	cd slides_source; pdflatex --shell-escape debug.tex
+	cd slides_source; pdflatex --shell-escape debug.tex
+	cd slides_source; pdflatex --shell-escape debug.tex
 	mv slides_source/debug.pdf .
